--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,5 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+#Basic Authorization Credentials
+secure.userName=Sam
+secure.password=1234
+secure.role=USER
+
 
 
